fix: onboarding shift to top

--- a/packages/wallets/src/components/WalletsCarouselContent/WalletsCarouselContent.scss
+++ b/packages/wallets/src/components/WalletsCarouselContent/WalletsCarouselContent.scss
@@ -13,7 +13,7 @@
 
     &__title {
         margin-bottom: auto;
-        padding: 0.8rem 1.4rem 0;
+        padding: 0 1.4rem;
     }
 
     &__carousel {
